# guestbook

./: Cargo.toml  build.rs
notes/: notes.md
proto/: guestbook.proto
queries/: dummy-data.sql  init.sql
scripts/: postgres-container.sh  tmp-ssl-cert.sh
src/: db.rs  main.rs
