[package]
name = "guestbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.9"
prost = "0.11"
futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"

async-stream = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7"
tonic-reflection = "0.10.1"

sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-native-tls"] }
dotenvy = "0.15.7"

[build-dependencies]
tonic-build = "0.9"
